# advent-of-code

./: .gitignore  main.py  notebook_loader.py  pyproject.toml
lib/: get_input.py
puzzles/: day00.py  grid.py  utils.py
puzzles/2015/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py
puzzles/2022/: day01.py  day02.py  day03.py  day04.py
puzzles/2023/: day01.ipynb  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.ipynb  day21.py  day22.py  day23.py  day24.py  day25.py
puzzles/2023/.ipynb_checkpoints/: day01-checkpoint.ipynb
