[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["luxcem <a@luxcem.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
black = "^23.11.0"
isort = "^5.12.0"
numpy = "^1.26.2"
pandas = "^2.1.4"
ipdb = "^0.13.13"
nbformat = "^5.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
