[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["luxcem <a@luxcem.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
black = "^23.11.0"
isort = "^5.12.0"
numpy = "^1.26.2"
pandas = "^2.1.4"
ipdb = "^0.13.13"
nbformat = "^5.9.2"
shapely = "^2.0.2"
networkx = "^3.2.1"
graphviz = "^0.20.1"
pygame = "^2.5.2"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
sympy = "^1.12"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
